hw1/stylesheet.css
body {
    background-color: rgb(46, 41, 37);
    background-image: url("./resources/DesignSource01/background/background.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100vw;
    height: 2500px;
    margin: 0;
    overflow-x: hidden;
    overflow-y: auto;
}
/* Main page elements style */
header {
    width: 100%;
    height: 72px;
    background-color: rgba(0,0,0,.25);
    border-bottom: 1px solid rgba(175, 121, 59, .7);
}
#header-logo {
    position: absolute;
    top: 25px;
    left: 25px;
}
#header-text {
    width: 100%;
    height: 100%;
}
#header-text img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding-top: 25px;
}
#header-title {
    position: absolute;
    top: 0;
    right: 0;
}
button {
    border: 0;
    background-color: rgba(0, 0, 0, 0);
}
button.main-button {
    border: 0;
    background-color: rgba(0, 0, 0, 0);
    padding: 0;
    width: 100%;
    margin: 16px;
    left: 0;
    bottom: 0;
}
#participate {
    z-index: 31;
    position: fixed;
}
button.main-button img {
    position:relative;
    display: block;
    width: calc(100% - 32px);
    border-radius: 12px;
    box-shadow: 10px 10px 12px rgba(0, 0, 0, 0.6);
    z-index: inherit;
}
.contents-container {
    position: inherit;
}
.contents {
    position: absolute;
}
#spark {
    top: 123px;
    bottom: 500px;
    left: calc(50% - 252px);
    animation-name: show-spark;
    animation-delay: 1200ms;
    animation-duration: 200ms;
    animation-fill-mode: forwards;
    transform: scaleY(0);
}
@keyframes show-spark {
    from {
        top: 123px;
        transform: scaleY(0);
    }
    to {
        top: 50px;
        transform: scaleY(1);
    }
}
@-webkit-keyframes show-spark {
    from {
        top: 123px;
        transform: scaleY(0);
    }
    to {
        top: 50px;
        transform: scaleY(1);
    }
}
.drop-the {
    top: 140px;
    left: calc(50% - 214px);
}
.money {
    top: 150px;
    left: calc(50% - 318px);
    animation-name: money-blink;
    animation-delay: 3.5s;
    animation-duration: 1.6s;
    animation-iteration-count: infinite;
}
@keyframes money-blink {
    from { opacity: 1; }
    50% { opacity: 0.8; }
    to { opacity: 1; }
}
@-webkit-keyframes money-blink {
    from { opacity: 1; }
    50% { opacity: 0.8; }
    to { opacity: 1; }
}
.money-o {
    top: 150px;
    left: calc(50% - 318px);
    opacity: .4;
    animation-name: o-blink;
    animation-delay: 3s;
    animation-duration: 300ms;
    animation-fill-mode: forwards;
}
@keyframes o-blink {
    0% { opacity: .4; }
    25% { opacity: 0; }
    50% { opacity: .4; }
    75% { opacity: 0; }
    100% { opacity: .4; }
}
@-webkit-keyframes o-blink {
    0% { opacity: .4; }
    25% { opacity: 0; }
    50% { opacity: .4; }
    75% { opacity: 0; }
    100% { opacity: .4; }
}
.inner {
    z-index: 3;
}
.description {
    top: 365px;
    left: calc(50% - 230px);
}
.money-img  {
    top: 460px;
    left: calc(50% - 292px);
    animation-name: money-img-move;
    animation-duration: 600ms;
    animation-iteration-count: infinite;
}
@keyframes money-img-move {
    from { top: 460px; }
    80% { top: 467px;}
    to { top: 460px;}
}
@-webkit-keyframes money-img-move {
    from { top: 460px; }
    80% { top: 467px;}
    to { top: 460px;}
}
.money-text {
    top: 723px;
    left: calc(50% - 118px);
    animation-name: money-text-move;
    animation-duration: 600ms;
    animation-iteration-count: infinite;
}
@keyframes money-text-move {
    from { transform: scale(1.1, 1.1); }
    to { transform: scale(1, 1); }
}
@-webkit-keyframes money-text-move {
    from { transform: scale(1.1, 1.1); }
    to { transform: scale(1, 1); }
}
.money-left {
    top: 750px;
    left: calc(50% - 220px);
    animation-name: money-left-move;
    animation-duration: 600ms;
    animation-iteration-count: infinite;
}
@keyframes money-left-move {
    from { transform: rotate(-20deg); }
    80% { transform: rotate(0);}
    to { transform: rotate(-20deg); }
}
@-webkit-keyframes money-left-move {
    from { transform: rotate(-20deg); }
    80% { transform: rotate(0);}
    to { transform: rotate(-20deg); }
}
.money-right {
    top: 726px;
    left: calc(50% + 124px);
    animation-name: money-right-move;
    animation-duration: 600ms;
    animation-iteration-count: infinite;
}
@keyframes money-right-move {
    from { transform: rotate(20deg); }
    80% { transform: rotate(0);}
    to { transform: rotate(20deg); }
}
@-webkit-keyframes money-right-move {
    from { transform: rotate(20deg); }
    80% { transform: rotate(0);}
    to { transform: rotate(20deg); }
}
.text-box {
    display: block;
    top: 900px;
    left: calc(50% - 270px);
    width: 540px;
    height: 230px;
    background-color: rgba(22, 13, 11, .5);
    color: white;
    font-size: 2em;
    border: solid 1px rgb(136, 94, 49); 
    border-radius: 16px;
}
.text-box-title {
    position: absolute;
    display: block;
    left: 161px;
    z-index: 1;
    top: -23px;
}
.text-box-contents {
    position: relative;
    text-align: center;
    padding: 40px;
}
.text-box-contents hr {
    color: rgb(136, 94, 49);
    margin: 10px 0 30px  0;
}
img.share-box {
    top: 1180px;
    left: calc(50% - 347px);
    opacity: .5;
    animation-name: share-box-blink;
    animation-delay: 8s;
    animation-duration: 7s;
    animation-iteration-count: infinite;
}
@keyframes share-box-blink {
    0% { opacity: .5; }
    2% { opacity: 1; }
    4% { opacity: .5; }
    6% {opacity: 1; }
    100% {opacity: 1; }
}
@-webkit-keyframes share-box-blink {
    0% { opacity: .5; }
    3% { opacity: 1; }
    6% { opacity: .5; }
    9% {opacity: 1; }
    100% {opacity: 1; }
}
div.share-box {
    top: 1230px;
    width: 640px;
    height: 140px;
    left: calc(50% - 320px);
}
.share-items {
    left: calc(50% - 347px);
    padding: 0;
    z-index: 1;
}
.coins-bottom {
    background-image: url("./resources/DesignSource01/coins_bottom/coins_bottom.png");
    top: 1400px;
    width: 100%;
    height: 180px;
    z-index: 1;
}
footer {
    position: absolute;
    background-color: rgba(81, 40, 12, .4);
    width: 100%;
    height: 800px;
    top: 1580px;
}
.footer-description {
    font-size: 1.3em;
    color: #af9480;
    margin: 40px;
    margin-top: 50px;
}
footer h6 {
    font-size: 1.3em;
    margin: 10px 0 10px 0;
}
footer ul {
    list-style-type: disc;
    margin-top: 10px;
    margin-left: 20px;
    padding-left: 0;
}
footer li {
    margin-bottom: 8px;
}
footer li.tabbed {
    list-style-type: none;
}

/* Coins effects layer style */
#coins-layer-container {
    position: absolute;
    width: 100%;
    top: -80vh;
    z-index: 5;
    animation-name: coins-fall;
    animation-delay: 300ms;
    animation-duration: 400ms;
    animation-fill-mode: forwards;
}
@keyframes coins-fall {
    from { top: -80vh; visibility: visible; }
    to { top: 0; visibility: visible; }
}
@-webkit-keyframes coins-fall  {
    from { top: -80vh; visibility: visible; }
    to { top: 0; visibility: visible; }
}
#coins-layer1 {
    position: absolute;
    z-index: 5;
}
#coins-layer2 {
    position: absolute;
    z-index: 6;
}
#coins-layer3 {
    width: 100%;
    position: absolute;
    z-index: 7;
}
.coin {
    position: absolute;
}
#coin1 {
    left: 15vw;
    top: 40vh;
}
#coin2 {
    top: 40vh;
    left: 83vw;
}
#coin3 {
    top: 40vh;
}
#coin4 {
    top: 33vh;
    left: 83vw;
}
#coin5 {
    top: 15vh;
}
#coin6 {
    top: 50vh;
    right: 0;
}

/* Send page elements style */
#send-page {
    position: fixed;
    top: 0;
    width: 100%;
    height: 100vh;
    background-color: black;
    z-index: 30;
    visibility: hidden;
}
#send-page-upper {
    position: fixed;
    background-image: url("./resources/DesignSource02/bg_upper.jpg");
    background-size: cover;
    background-position: bottom;
    background-repeat: no-repeat;
    width: 100%;
    height: 50vh;
    z-index: 32;
    top: -5vh;
}
.send-page-upper-open {
    animation-name: open-upper;
    animation-delay: 100ms;
    animation-duration: 300ms;
    animation-fill-mode: forwards;
}
@keyframes open-upper {
    0% { top: -5vh; }
    40% { top: 0; }
    60% { top: -3vh;}
    80% { top: 0; }
    90% { top: -1vh; }
    100% { top: 0; }
}
@-webkit-keyframes open-upper {
    0% { top: -5vh; }
    40% { top: 0; }
    60% { top: -3vh;}
    80% { top: 0; }
    90% { top: -1vh; }
    100% { top: 0; }
}
#send-page-lower {
    position: fixed;
    background-image: url("./resources/DesignSource02/bg_lower.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    top: 55vh;
    width: 100%;
    height: 50vh;
    z-index: 33;
}
.send-page-lower-open {
    animation-name: open-lower;
    animation-delay: 100ms;
    animation-duration: 300ms;
    animation-fill-mode: forwards;
}
@keyframes open-lower {
    0% { top: 55vh; }
    40% { top: 50vh;}
    60% { top: 53vh;}
    80% { top: 50; }
    90% { top: 51vh; }
    100% { top: 50vh; }
}
.send-page-item {
    z-index: 34;
}
.send-page-container {
    position: absolute;
    width: 100%;
}
.send-page-content {
    position: relative;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
#chain {
    position: absolute;
    left: 40px;
}
#close-button {
    position: absolute;
    top: 80px;
    right: 60px;
}
#coupon-button {
    position: absolute;
    top: 15px;
    left: calc(50% + 160px);
    z-index: 35;
}
#send-money {
    position: absolute;
    bottom: 0;
    z-index: 99;
}

